--- a/blocks/header/__lang/header__lang-eng.css
+++ b/blocks/header/__lang/header__lang-eng.css
@@ -1,13 +1,12 @@
 .header__lang-eng {
-  max-width: 28px;  
+  max-width: 28px;
   height: 29px;
-  font-family: 'Inter';
-  font-style: normal;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
-text-align: right;
-color: #FFFFFF;
+  text-align: right;
+  color: #FFFFFF;
 }
 
 @media screen and (max-width: 767px) {
