--- a/blocks/header/__lang/header__lang-rus.css
+++ b/blocks/header/__lang/header__lang-rus.css
@@ -1,7 +1,7 @@
 .header__lang-rus {
   max-width: 30px;
   min-height: 28px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
