--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,15 +1,17 @@
 .footer__copyright {
-  margin: 0px;
-  padding: 0px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  flex-grow: 3;
   font-family: 'Inter', 'Arial', sans-serif;
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .footer__copyright {
     max-width: 186px;
-    height: 14px;
     line-height: 14px;
-    font-weight: 400;
+    margin-top: 48px;
+    margin-bottom: 24px;
   }
 }
