--- a/blocks/footer/__links/footer__links-list.css
+++ b/blocks/footer/__links/footer__links-list.css
@@ -11,14 +11,16 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
-    gap: 18px;
+    gap: 32px;
 }
 
-@media screen and (max-width: 767px) {
+.footer__links-list:hover {
+  transition: all 0.5s linear;
+  opacity: 80%;
+}
+
+@media screen and (max-width: 768px) {
     .footer__links-list {
-      max-width: 74px;
-      height: 248px;
-      margin: 0px;
       font-size: 24px;
       line-height: 24px;
       flex-direction: column;
