--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,10 +6,12 @@
     line-height: 100px;
     text-align: center;
     color: #FFFFFF;
+    margin: 60px auto 0px auto;
 }
 
 @media screen and ( max-width: 767px) {
     .lead__title {
+      margin: 48px auto 0px auto;
       font-size: 40px;
       line-height: 44px;
     }
