--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -8,9 +8,18 @@
     margin: 0;
 }
 
-@media screen and (min-width: 767px) and ( max-width: 1023px) {
+@media screen and (min-width: 768px) and ( max-width: 1024px) {
     .place__text {
       font-size: 16px;
       line-height: 26px;
     }
   }
+
+  @media screen and (max-width: 768px) {
+    .place__text {
+        font-size: 16px;
+        line-height: 26px;
+        margin-right: 16px;
+        margin-left: 16px;
+    }
+}
