--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,14 +8,14 @@
   color: #FFFFFF;
 }
   
-  @media screen and ( max-width: 1023px) {
+  @media screen and ( max-width: 1024px) {
     .place__title {
-      max-height: 46px;
+      line-height: 46px;
       font-size: 42px;
     }
   }
   
-  @media screen and ( max-width: 767px) {
+  @media screen and ( max-width: 768px) {
     .place__title {
       padding-left: 16px;
       font-size: 32px;
