--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,10 @@
 @import url(../vendor/normalize.css);
-@import url(../vendor/fonts/inter.css);
+@import url(../vendor/inter/inter.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__lang/header__lang.css);
-@import url(../blocks/header/__lang/header__lang-rus.css);
-@import url(../blocks/header/__lang/header__lang-eng.css);
+@import url(../blocks/header/__lang/header__lang-link.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
@@ -20,7 +21,7 @@
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
-@import url(../blocks/lead/__image/__image-background/lead__image-background.css);
+@import url(../blocks/lead/__image-background/lead__image-background.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/link/link.css);
@@ -35,6 +36,6 @@
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__text/place__text.css);
-@import url(../blocks/place/__website/__website-link/place__website-link.css);
-@import url(../blocks/place/__website/__website-url-heading/place__website-url-heading.css);
+@import url(../blocks/place/__website-link/place__website-link.css);
+@import url(../blocks/place/__website-url-heading/place__website-url-heading.css);
 @import url(../blocks/place/__website/place__website.css);
