--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,13 @@
 .footer__copyright {
+  margin: 0px;
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
-  flex-grow: 3;
   font-family: 'Inter', 'Arial', sans-serif;
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__copyright {
     max-width: 186px;
     line-height: 14px;
