--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,4 +1,4 @@
-.footer__links-list {
+.footer__links {
   max-width: 465px;
   margin: 0px;
   padding: 0px;
@@ -11,16 +11,11 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
-  gap: 32px;
+  gap: 18px;
 }
 
-.footer__links-list:hover {
-  transition: all 0.5s linear;
-  opacity: 80%;
-}
-
-@media screen and (max-width: 768px) {
-    .footer__links-list {
+@media screen and (max-width: 767px) {
+    .footer__links {
       font-size: 24px;
       line-height: 24px;
       flex-direction: column;
