--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,12 +5,6 @@
   flex-direction: row;
   justify-content: space-between;
 }
-
-@media screen and (max-width: 1279px) {
-    .footer {
-      max-width: 1184px;
-    } 
-  }
   
   @media screen and (max-width: 1023px) {
     .footer {
@@ -20,14 +14,14 @@
   
   @media screen and (max-width: 768px) {
     .footer {
-      margin: 88px 24px 24px 24px;
       max-width: 720px;
+      height: 18px;
+      margin: 88px 24px 24px 24px;
     }
   }
 
   @media screen and (max-width: 320px) {
     .footer {
-      max-width: 186px;
       margin: 64px 118px 24px 16px;
       flex-direction: column;
     }
