--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,7 @@
 .lead__caption {
   font-family: 'Inter', 'Arial', sans-serif;
-  margin: 8px 0px;
+  margin-top: 8px;
+  margin-bottom: 0px;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
