--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,12 +4,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 48px;
+  margin: 0;
   padding-bottom: 92px;
 }
 
+@media screen and (max-width: 1279px) {
 
-@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .lead {
+      margin: 0 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
 
   .lead {
       max-width: none;
@@ -18,7 +24,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 
   .lead {
       margin: 0;
