--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,14 +8,15 @@
   color: #FFFFFF;
 }
   
-  @media screen and ( max-width: 1024px) {
+  @media screen and ( max-width: 768px) {
     .place__title {
+      max-width: 330px;
       line-height: 46px;
       font-size: 42px;
     }
   }
   
-  @media screen and ( max-width: 768px) {
+  @media screen and ( max-width: 320px) {
     .place__title {
       padding-left: 16px;
       font-size: 32px;
