changing errors after the review

--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,6 +9,12 @@
   margin: 60px auto 0px auto;
 }
 
+@media screen and ( max-width: 768px) {
+  .lead__title {
+    margin: 48px auto 0px auto;
+  }
+}
+
 @media screen and ( max-width: 767px) {
     .lead__title {
       margin: 48px auto 0px auto;
